DevTools: Fixed profiler warning icon overlapping.
R=apavlov
NOTRY=true

Review URL: https://codereview.chromium.org/120683003

git-svn-id: svn://svn.chromium.org/blink/trunk@164375 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/profilesPanel.css
+++ b/front_end/profilesPanel.css
@@ -118,10 +118,11 @@
     background-image: url(Images/statusbarButtonGlyphs.png);
     background-size: 320px 144px;
     background-position: -201px -105px;
-    padding-left: 14px;
+    padding-left: 12px;
     width: 10px;
     height: 10px;
     vertical-align: -1px;
+    margin-right: 2px;
 }
 
 .data-grid tr.selected .profile-node-file {
